--- a/ReservasAulas-V5/build.gradle
+++ b/ReservasAulas-V5/build.gradle
@@ -26,6 +26,14 @@ dependencies {
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:29.0-jre'
     
+    // Uso de Mockito
+    testCompile "org.mockito:mockito-inline:+"
+
+	// MogoDB Driver
+    compile 'org.mongodb:mongodb-driver-sync:4.0.2'
+
+    // Driver MySQL
+    implementation "mysql:mysql-connector-java:8.0.19"
     
 }
 
